Fix typo in roles

--- a/setup-host.yml
+++ b/setup-host.yml
@@ -13,6 +13,6 @@
     - disable-apparmor
     - config-libvirt
     - setup-gpu-passthrough
-    - configure-api
+    - setup-host-api
     - setup-cluster
     - lcd-reset
