Fix typo in task name

--- a/setup-host.yml
+++ b/setup-host.yml
@@ -12,7 +12,7 @@
     - pip-packages
     - disable-apparmor
     - config-libvirt
-    - setup-gpu-passthrough
+    - setup-gpus
     - setup-host-api
     - setup-cluster
     - lcd-reset
