--- a/roles/apt-useful-packages/tasks/main.yml
+++ b/roles/apt-useful-packages/tasks/main.yml
@@ -19,7 +19,8 @@
         "libvirt-clients",
         "bridge-utils",
         "lm-sensors",
-        "ipmitool"
+        "ipmitool",
+        "unzip",
       ]
     state: latest
     update_cache: yes
