--- a/roles/setup-host-api/tasks/main.yml
+++ b/roles/setup-host-api/tasks/main.yml
@@ -7,7 +7,7 @@
 
 # install bun as cloud user https://bun.sh/install, then move it to /usr/local/bin
 - name: "Install bun"
-  shell: "curl https://bun.sh | bash"
+  shell: "curl -fsSL https://bun.sh/install | bash"
   remote_user: cloud
 
 - name: "Move bun to /usr/local/bin"
