--- a/roles/setup-host-api/tasks/main.yml
+++ b/roles/setup-host-api/tasks/main.yml
@@ -11,7 +11,7 @@
   remote_user: root
 
 - name: "Move bun to /usr/local/bin"
-  shell: mv /home/root/bin/bun /usr/local/bin/bun
+  shell: mv /root/.bun/bin/bun /usr/local/bin/
 
 - name: "Make bun executable"
   shell: chmod a+x /usr/local/bin/bun
