--- a/roles/setup-host-api/tasks/main.yml
+++ b/roles/setup-host-api/tasks/main.yml
@@ -5,9 +5,8 @@
   vars:
     lcd_message: "Configuring kthcloud API"
 
-# install bun as root user https://bun.sh/install, then move it to /usr/local/bin
 - name: "Install bun"
-  shell: "curl -fsSL https://bun.sh/install | bash"
+  shell: "export HOME=/root && curl -fsSL https://bun.sh/install | bash"
   remote_user: root
 
 - name: "Move bun to /usr/local/bin"
