Add nfs-common to installed packages

--- a/roles/apt-useful-packages/tasks/main.yml
+++ b/roles/apt-useful-packages/tasks/main.yml
@@ -20,6 +20,7 @@
         "bridge-utils",
         "lm-sensors",
         "ipmitool",
+        "nfs-common",
         "unzip",
       ]
     state: latest
